{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 830,
  "lineage": "52111af0-f7f8-621d-ac9c-5c8054a586d2",
  "resources": [
    {
      "module": "module.alb_backend",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:loadbalancer/app/alb-dev-be/036968fc06c10150",
            "arn_suffix": "app/alb-dev-be/036968fc06c10150",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-dev-be-1110369719.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:loadbalancer/app/alb-dev-be/036968fc06c10150",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-dev-be",
            "security_groups": [
              "sg-09854e18bcb6028f9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a87aecf215603c0"
              },
              {
                "subnet_id": "subnet-051925463e261e733"
              }
            ],
            "subnets": [
              "subnet-04a87aecf215603c0",
              "subnet-051925463e261e733"
            ],
            "vpc_id": "vpc-0bdf66f19385c1faa",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_backend.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_backend",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:listener/app/alb-dev-be/036968fc06c10150/50f81f267d230d9d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:targetgroup/tg-dev-b/9b5c1015cf1ace89",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:listener/app/alb-dev-be/036968fc06c10150/50f81f267d230d9d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:loadbalancer/app/alb-dev-be/036968fc06c10150",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_backend.aws_alb.alb",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_backend.aws_security_group.sg",
            "module.target_group_backend.aws_alb_target_group.target_group"
          ]
        }
      ]
    },
    {
      "module": "module.alb_client",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:loadbalancer/app/alb-dev-cli/0d30f78fcdb9b799",
            "arn_suffix": "app/alb-dev-cli/0d30f78fcdb9b799",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-dev-cli-1460782127.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:loadbalancer/app/alb-dev-cli/0d30f78fcdb9b799",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-dev-cli",
            "security_groups": [
              "sg-00dbd9d5ac568af25"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a87aecf215603c0"
              },
              {
                "subnet_id": "subnet-051925463e261e733"
              }
            ],
            "subnets": [
              "subnet-04a87aecf215603c0",
              "subnet-051925463e261e733"
            ],
            "vpc_id": "vpc-0bdf66f19385c1faa",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_client.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_client",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:listener/app/alb-dev-cli/0d30f78fcdb9b799/d3653388cf657a39",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:targetgroup/tg-dev-c-b/b5dd036c7a1575c7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:listener/app/alb-dev-cli/0d30f78fcdb9b799/d3653388cf657a39",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:loadbalancer/app/alb-dev-cli/0d30f78fcdb9b799",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_client.aws_alb.alb",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_client.aws_security_group.sg",
            "module.target_group_client_blue.aws_alb_target_group.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:route-table/rtb-0cd5dc3a4327421b9",
            "default_route_table_id": "rtb-0cd5dc3a4327421b9",
            "id": "rtb-0cd5dc3a4327421b9",
            "owner_id": "533253532860",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09652dd4c8dd40bd8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt_dev"
            },
            "tags_all": {
              "Name": "public_rt_dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f47f9e99f20acf9",
            "association_id": "eipassoc-06728919a67f62750",
            "domain": "vpc",
            "id": "eipalloc-01f47f9e99f20acf9",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0b1ce9b9b4a6b3af8",
            "private_dns": "ip-10-120-3-235.eu-central-1.compute.internal",
            "private_ip": "10.120.3.235",
            "public_dns": "ec2-18-158-47-93.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.158.47.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-dev"
            },
            "tags_all": {
              "Name": "eip-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:internet-gateway/igw-09652dd4c8dd40bd8",
            "id": "igw-09652dd4c8dd40bd8",
            "owner_id": "533253532860",
            "tags": {
              "Name": "igw_dev"
            },
            "tags_all": {
              "Name": "igw_dev"
            },
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f47f9e99f20acf9",
            "connectivity_type": "public",
            "id": "nat-0fcfa055ca68c0ddb",
            "network_interface_id": "eni-0b1ce9b9b4a6b3af8",
            "private_ip": "10.120.3.235",
            "public_ip": "18.158.47.93",
            "subnet_id": "subnet-04a87aecf215603c0",
            "tags": {
              "Name": "nat_dev"
            },
            "tags_all": {
              "Name": "nat_dev"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:route-table/rtb-027fda2af73706521",
            "id": "rtb-027fda2af73706521",
            "owner_id": "533253532860",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fcfa055ca68c0ddb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt_dev"
            },
            "tags_all": {
              "Name": "private_rt_dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_priv_subnets_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0373bf473f50d8221",
            "route_table_id": "rtb-027fda2af73706521",
            "subnet_id": "subnet-0be72f2abe4390d50"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_client",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f74abd589ea37bb5",
            "route_table_id": "rtb-027fda2af73706521",
            "subnet_id": "subnet-0fca7779bf7c9bb35"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_client",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_priv_subnets_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad416be6779a59aa",
            "route_table_id": "rtb-027fda2af73706521",
            "subnet_id": "subnet-07234a8750672322d"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_server",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c40cf398e217e5d1",
            "route_table_id": "rtb-027fda2af73706521",
            "subnet_id": "subnet-0a71fd34fd80d36d1"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_server",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_pub_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047a897ac77d86a84",
            "route_table_id": "rtb-0cd5dc3a4327421b9",
            "subnet_id": "subnet-04a87aecf215603c0"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017e3b1cb6d0ec97b",
            "route_table_id": "rtb-0cd5dc3a4327421b9",
            "subnet_id": "subnet-051925463e261e733"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:subnet/subnet-0be72f2abe4390d50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.120.6.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be72f2abe4390d50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533253532860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_client_0_dev"
            },
            "tags_all": {
              "Name": "private_subnet_client_0_dev"
            },
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:subnet/subnet-0fca7779bf7c9bb35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.120.8.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fca7779bf7c9bb35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533253532860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_client_1_dev"
            },
            "tags_all": {
              "Name": "private_subnet_client_1_dev"
            },
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:subnet/subnet-07234a8750672322d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.120.10.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07234a8750672322d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533253532860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_server_0_dev"
            },
            "tags_all": {
              "Name": "private_subnet_server_0_dev"
            },
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:subnet/subnet-0a71fd34fd80d36d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.120.12.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a71fd34fd80d36d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533253532860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_server_1_dev"
            },
            "tags_all": {
              "Name": "private_subnet_server_1_dev"
            },
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:subnet/subnet-04a87aecf215603c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.120.2.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a87aecf215603c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533253532860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_0_dev"
            },
            "tags_all": {
              "Name": "public_subnet_0_dev"
            },
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:subnet/subnet-051925463e261e733",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.120.4.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051925463e261e733",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533253532860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1_dev"
            },
            "tags_all": {
              "Name": "public_subnet_1_dev"
            },
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:vpc/vpc-0bdf66f19385c1faa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.0.0/16",
            "default_network_acl_id": "acl-0578f0420fafaa731",
            "default_route_table_id": "rtb-0cd5dc3a4327421b9",
            "default_security_group_id": "sg-0a5b007adf1393278",
            "dhcp_options_id": "dopt-00eac941b1682e424",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bdf66f19385c1faa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd5dc3a4327421b9",
            "owner_id": "533253532860",
            "tags": {
              "Name": "vpc_dev"
            },
            "tags_all": {
              "Name": "vpc_dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_alb_backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:security-group/sg-09854e18bcb6028f9",
            "description": "Controls access to the server ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09854e18bcb6028f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-dev-backend",
            "name_prefix": "",
            "owner_id": "533253532860",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-dev-backend"
            },
            "tags_all": {
              "Name": "alb-dev-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_alb_client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:security-group/sg-00dbd9d5ac568af25",
            "description": "Controls access to the client ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dbd9d5ac568af25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-dev-client",
            "name_prefix": "",
            "owner_id": "533253532860",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-dev-client"
            },
            "tags_all": {
              "Name": "alb-dev-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_ecs_task_client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:533253532860:security-group/sg-0a783c4a75c489a39",
            "description": "Controls access to the client ECS task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a783c4a75c489a39",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00dbd9d5ac568af25"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs-task-dev-client",
            "name_prefix": "",
            "owner_id": "533253532860",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-task-dev-client"
            },
            "tags_all": {
              "Name": "ecs-task-dev-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.security_group_alb_client.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_backend",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:targetgroup/tg-dev-b/9b5c1015cf1ace89",
            "arn_suffix": "targetgroup/tg-dev-b/9b5c1015cf1ace89",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": false,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:targetgroup/tg-dev-b/9b5c1015cf1ace89",
            "lambda_multi_value_headers_enabled": false,
            "name": "tg-dev-b",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "target_type": "lambda",
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_client_blue",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:targetgroup/tg-dev-c-b/b5dd036c7a1575c7",
            "arn_suffix": "targetgroup/tg-dev-c-b/b5dd036c7a1575c7",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:targetgroup/tg-dev-c-b/b5dd036c7a1575c7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-dev-c-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_client_green",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:targetgroup/tg-dev-c-g/d53b8a31b4dbb972",
            "arn_suffix": "targetgroup/tg-dev-c-g/d53b8a31b4dbb972",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:533253532860:targetgroup/tg-dev-c-g/d53b8a31b4dbb972",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-dev-c-g",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bdf66f19385c1faa"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}